form, tabel and list added

--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,3 +1,4 @@
 @import 'variables/variables_flex';
 @import 'variables/variables_position';
+@import 'variables/variables_list';
 @import 'variables/variables_config';
