--- a/src/abstracts/variables/_variables_config.scss
+++ b/src/abstracts/variables/_variables_config.scss
@@ -8,6 +8,12 @@ $primary_title_font: "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Ari
 $secondary_title_font: "Segoe Ui, sans-serif";
 $code_font: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace;
 
+// ::::: FORM :::::
+$CHECKBOX_RADIO_BG_DEFAULT: #eee;
+$CHECKBOX_RADIO_PRIMARY_COLOR: #2ecc71;
+$CHECKBOX_RADIO_SECONDARY_COLOR: #ffffff;
+$CHECKBOX_RADIO_SIZE: 20px;
+
 // ::::: CELLS :::::
 $number_of_cells: 12;
 $cells_gutter: 15px;
