--- a/src/magic-monkey.min.scss
+++ b/src/magic-monkey.min.scss
@@ -8,6 +8,11 @@
 // ------------------------  4. Layout-related sections  ------------------------
 @import 'layout/grid';
 @import 'layout/grid_media';
+@import 'layout/form';
+@import 'layout/list';
+@import 'layout/list_media';
+@import 'layout/table';
+@import 'layout/table_media';
 // ------------------------  5. Components  ------------------------
 // ------------------------  6. Page-specific styles  ------------------------
 // ------------------------  7. Themes  ------------------------
