--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -1,6 +1,11 @@
-@import 'mixins/mixins_breakpoints';
-@import 'mixins/mixins_cells';
-@import 'mixins/mixins_grid';
-@import 'mixins/mixins_margin';
-@import 'mixins/mixins_padding';
-@import 'mixins/mixins_position';
+// ------------------------  1. Utils  ------------------------
+@import 'mixins/utils/mixins_breakpoints';
+// ------------------------  2. Elements  ------------------------
+@import 'mixins/elements/mixins_cells';
+@import 'mixins/elements/mixins_grid';
+@import 'mixins/elements/mixins_margin';
+@import 'mixins/elements/mixins_padding';
+@import 'mixins/elements/mixins_position';
+@import 'mixins/elements/mixins_form';
+@import 'mixins/elements/mixins_list';
+@import 'mixins/elements/mixins_table';
